--- a/css/general.css
+++ b/css/general.css
@@ -29,3 +29,13 @@ textarea,
 select {
     font: inherit;
 }
+
+a {
+    text-decoration: none;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
