--- a/css/general.css
+++ b/css/general.css
@@ -39,3 +39,19 @@ ul {
     padding: 0;
     list-style-type: none;
 }
+
+.section-padding {
+    padding: 12rem 0;
+}
+
+.section-headline {
+    font-size: 3.5rem;
+    line-height: 52px;
+    color: #100F0F;
+}
+
+.headline-footer {
+    font-size: 2.5rem;
+    line-height: 38px;
+    color: #403F3F;
+}
